# treesitter-analyzer

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  build.rs  client.lua  test.lua
queries/: lua.scm  rust.scm
scripts/: dl_parsers.sh
src/: main.rs  rpc.rs
src/analyzer/: mod.rs  utils.rs
src/fs/: mod.rs
src/language_tools/: mod.rs
src/project/: fs.rs  mod.rs  utils.rs
src/rpc/: mod.rs
