[package]
name = "treesitter-lsp"
version = "0.1.0"
authors = ["kiyan42 <yazdani.kiyan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.17.0"
jsonrpc-tcp-server = "15.0"

[build-dependencies]
cc="*"
